--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   package_info_plus: ^8.0.0
   mailer: ^6.1.0
   dio: ^5.4.3+1
-  flutter_mailer: ^2.1.2
+  #flutter_mailer: ^2.1.2
   logging: ^1.2.0
   sentry: ^8.2.0
   universal_io: ^2.2.2
